<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/favorite"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_newpost"
        android:icon="@drawable/nuevo"
        android:title="@string/title_newpost" />
    <item
        android:id="@+id/navigation_comunicacion"
        android:icon="@drawable/chat"
        android:title="@string/title_Chat" />
    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/perfil"
        android:title="@string/title_perfil" />

</menu>