<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tree_solution_proyect.Vistas.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"
        />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.tree_solution_proyect.Vistas.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        android:menuCategory="secondary"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_newpost"
        android:name="com.example.tree_solution_proyect.Vistas.ui.NewPost.NewPostFragment"
        android:label="@string/title_newpost"
        android:menuCategory="secondary"
        tools:layout="@layout/fragment_newpost" />
    <fragment
        android:id="@+id/navigation_comunicacion"
        android:name="com.example.tree_solution_proyect.Vistas.ui.comunicacion.ComunicacionFragment"
        android:label="@string/title_Chat"
        android:menuCategory="secondary"
        tools:layout="@layout/fragment_newpost" />
    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.tree_solution_proyect.Vistas.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        android:menuCategory="secondary"
        tools:layout="@layout/fragment_newpost" />
</navigation>